# projector-installer

./: .gitignore  CHANGELOG.md  COMMANDS.md  MANIFEST.in  README-DEV.md  README.md  mypy.ini  pylintrc  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  lint.yml  mypy.yml  pylint.yml  release.yml  uploadReleaseAssets.js
projector/: __init__.py  actions.py  apps.py  cmd.py  dialogs.py  global_config.py  http_server_process.py  markdown.py  run_config.py  version.py
projector_installer/: __init__.py  actions.py  apps.py  certificate_chain.py  cmd.py  compatible_ide.json  config_generator.py  defaults.py  dialogs.py  global_config.py  http_server_process.py  ide_configuration.py  ide_update.py  installable_app.py  license.py  log_utils.py  products.py  projector_updates.py  run_config.py  secret_config.py  secrets.py  secure_config.py  timeout.py  updates.py  utils.py  version.py
projector_installer/bundled/client/: projector-client-web.js
projector_installer/test/: actions_test.py  apps_test.py  config_generator_test.py  dialogs_test.py  global_config_test.py  ide_update_test.py  log_utils_test.py
test/: actions_test.py  apps_test.py  config_generator_test.py  dialogs_test.py  global_config_test.py  ide_update_test.py  log_utils_test.py  products_test.py  projector_updates_test.py  run_config_test.py  secure_config_test.py
test/resources/: compatible_ide.json  installable_apps.py
