[metadata]
name = projector
version = attr:projector.version.__version__
author = JetBrains
maintainer = JetBrains
author_email = projector@jetbrains.com
description = Install, configure and run Idea with projector-server
long_description = file:README.md
license_file = LICENSE.txt
url = https://github.com/JetBrains/projector-installer
project_urls =
    Projector source = https://github.com/JetBrains/projector-installer
    Projector documentation = https://github.com/JetBrains/projector-installer

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT Software License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    projector

python_requires = >=3.6
install_requires=
    click
    requests
    dataclasses

include_package_data = True

[options.entry_points]
console_scripts =
    projector = projector.cmd:projector
