[metadata]
name = projector-installer
version = attr:projector_installer.version.__version__
author = JetBrains
maintainer = JetBrains
author_email = sergey.bulgakov@jetbrains.com
description = Install, configure and run JetBrains IDEs with Projector Server on Linux or in WSL
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
url = https://github.com/JetBrains/projector-installer
project_urls =
    Projector source = https://github.com/JetBrains/projector-installer
    Projector documentation = https://github.com/JetBrains/projector-installer

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = projector_installer
python_requires = >=3.6
include_package_data = True


[options.entry_points]
console_scripts =
    projector = projector_installer.cmd:projector
